--- a/sshkey.yml
+++ b/sshkey.yml
@@ -1,7 +1,17 @@
 ---
-- hosts:
+- hosts: newhost
   tasks:
-    - shell: rm -rf /tmp/*.authorized_keys
+    - name: find files to remove in tmp
+      find:
+        path: /tmp
+        patterns: "*.authorized_keys"
+      register: files_to_delete
+
+    - name: remove files from tmp
+      file:
+        path: "{{ item.path }}"
+        state: absent
+      with_items: "{{ files_to_delete.files  }}"
 
     - name: create user
       user: name=ykrest
