--- a/nginx.yml
+++ b/nginx.yml
@@ -40,7 +40,7 @@
   - name: default web page
     template:
       src: index.html.j2
-      dest: "/var/www/html"
+      dest: "/var/www/html/index.html"
       owner: root
       group: root
       mode: 0644
